This source of lua 4.0.1 has undergone changes which add/remove feature(s).
These changes are listed below:
1. src/llex.c: read_number() -- add support for parsing hexadecimal constants